# estimation_engine

./: app.py  dockerfile  environment.yml  pyproject.toml  requirements.txt  requirements_backup.txt
Space_matrix_Estimation.egg-info/: SOURCES.txt  requires.txt
artifacts/: Imported_data.csv  SKU_label.csv  classification_data_output_sample.csv  classification_prediction.csv  predicted.csv  preprocessor.pkl  test.csv  train.csv
data/: Input.csv  data.csv  output.json
myenv/conda-meta/: anyio-4.6.2-py312hecd8cb5_0.json  appnope-0.1.3-py312hecd8cb5_1001.json  argon2-cffi-21.3.0-pyhd3eb1b0_0.json  argon2-cffi-bindings-21.2.0-py312h6c40b1e_0.json  asttokens-2.0.5-pyhd3eb1b0_0.json  async-lru-2.0.4-py312hecd8cb5_0.json  attrs-24.2.0-py312hecd8cb5_0.json  babel-2.11.0-py312hecd8cb5_0.json  beautifulsoup4-4.12.3-py312hecd8cb5_0.json  blas-1.0-openblas.json  bleach-6.2.0-py312hecd8cb5_0.json  blinker-1.6.2-py312hecd8cb5_0.json  bottleneck-1.4.2-py312ha2b695f_0.json  brotli-1.0.9-h6c40b1e_8.json  brotli-bin-1.0.9-h6c40b1e_8.json  brotli-python-1.0.9-py312hcec6c5f_8.json  bzip2-1.0.8-h6c40b1e_6.json  ca-certificates-2024.9.24-hecd8cb5_0.json  certifi-2024.8.30-py312hecd8cb5_0.json  cffi-1.17.1-py312h9205ec4_0.json  charset-normalizer-3.3.2-pyhd3eb1b0_0.json  click-8.1.7-py312hecd8cb5_0.json  comm-0.2.1-py312hecd8cb5_0.json  contourpy-1.3.1-py312h1962661_0.json  cycler-0.11.0-pyhd3eb1b0_0.json  debugpy-1.6.7-py312hcec6c5f_0.json  (+130 more)
notebooks/: Data_Cleaning_0.0.ipynb  Data_Cleaning_1.0.ipynb  Model_Experimenting.ipynb  eda.ipynb
src/: exceptions.py  logger.py  utils.py
(+216 files in other folders)
